<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoginActivity"
    android:background="@drawable/bg_2">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/baseline_add_24" />

                    </LinearLayout>

                </ScrollView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uploadPic"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fullName"
                    android:textSize="13sp"
                    android:inputType="textCapCharacters"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dob"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fullName"
                    android:textSize="13sp"
                    android:inputType="textCapCharacters"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sexuality"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fullName"
                    android:textSize="13sp"
                    android:inputType="textCapCharacters"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lookingFor"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fullName"
                    android:textSize="13sp"
                    android:inputType="textCapCharacters"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutMe"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"

                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fullName"
                    android:textSize="13sp"
                    android:inputType="textCapCharacters"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />





            </LinearLayout>

        </ScrollView>





    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>